Refactor: Improve test formatting and consistency
This commit refactors various test files to improve code formatting and ensure consistency across the test suite.

Key changes:
- Standardized the use of trailing commas in lists, maps, and argument lists.
- Improved readability of multi-line `expect` statements by aligning parameters.
- Ensured consistent spacing and indentation throughout the test files.

Specific files affected:
- `test/performance_test.dart`
- `test/error_handling_test.dart`
- `test/backward_compatibility_test.dart`
- `test/web_json_logging_test.dart`
- `test/logger_plus_test.dart`
- `test/thread_safety_test.dart`

Additionally, minor adjustments were made to:
- `pubspec.yaml`: Updated description and removed redundant keywords.
- `lib/src/platform_output_native.dart`: Minor spacing adjustments.
- `lib/src/log_level.dart`: Minor spacing adjustments.
- `lib/src/output_formatter.dart`: Minor spacing adjustments and comment clarification.
- `lib/src/stack_trace_parser.dart`: Minor spacing adjustments.
- `lib/src/ansi_colors.dart`: Minor spacing adjustments.
- `example/lib/main.dart`: Standardized formatting and trailing commas.
- `lib/src/table_formatter.dart`: Minor spacing adjustments and formatting.
- `lib/src/logger_web.dart`: Standardized formatting and trailing commas.
- `lib/src/logger_options.dart`: Minor spacing adjustments and formatting.
- `lib/flutter_logger_pro.dart`: Minor comment formatting.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: flutter_logger_pro
-description: A modern, feature-rich logging library for Dart and Flutter with intelligent formatting, global configuration, and advanced JSON logging. Optimized for web development with interactive browser console support.
+description: A modern logging library for Dart and Flutter with intelligent formatting, JSON logging, and interactive web console support.
 version: 0.0.1
 homepage: https://github.com/VatsalJaganwala/flutter_logger_pro
 repository: https://github.com/VatsalJaganwala/flutter_logger_pro
@@ -12,8 +12,6 @@ topics:
   - console
   - web
   - flutter
-  - json
-  - table
 
 environment:
   sdk: ^3.9.2
