--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_logger_pro
 description: A modern logging library for Dart and Flutter with intelligent formatting, JSON logging, and interactive web console support.
-version: 0.0.2
+version: 0.0.3
 homepage: https://github.com/VatsalJaganwala/flutter_logger_pro
 repository: https://github.com/VatsalJaganwala/flutter_logger_pro
 issue_tracker: https://github.com/VatsalJaganwala/flutter_logger_pro/issues
@@ -14,7 +14,7 @@ topics:
   - flutter
 
 environment:
-  sdk: ">=3.0.0 <4.0.0"
+  sdk: ">3.3.0 <4.0.0"
   flutter: ">=1.17.0"
 
 dependencies:
@@ -25,7 +25,7 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-  test: ^1.26.2
+  test: ^1.25.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
